# Uni-Metaheuristics

./: .gitignore  CMakeLists.txt  TabuSearch1.csv  TabuSearch_p1.csv  TabuSearch_p2.csv  TabuSearch_p3.csv  TabuSearch_p3_inv.csv  TabuSearch_p4.csv  TabuSearch_p4_inv.csv  TabuSearch_p5.csv  TabuSearch_p5_inv.csv  TabuSearch_p6.csv  TabuSearch_p6_inv.csv  TabuSearch_p7.csv  TabuSearch_p7_inv.csv  dev_log.txt  main.cpp  test.txt
datasheets/: CompareLog.csv  Evolution1.csv  Evolution_T1.csv
include/: csvlogger.hpp  loader.hpp  problem.hpp  researcher.hpp  solution.hpp  solver.hpp
problem instances/: test-file.vrp
src/: csvlogger.cpp  loader.cpp  problem.cpp  researcher.cpp  solution.cpp  solver.cpp
